WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148400
Callee can be incorrectly overridden when it's captured
https://bugs.webkit.org/show_bug.cgi?id=148400
Summary
Callee can be incorrectly overridden when it's captured
Saam Barati
Reported
2015-08-24 14:44:54 PDT
Consider these two programs: "(function foo() { foo = 20; print(foo); })();" and "(function foo() { let x = function() { return foo; }; foo = 20; print(foo) })();" They have different behaviors. The latter incorrectly assigns 20 to foo. I think we can probably make this Just Work with a FunctionNameScope.
Attachments
patch
(21.73 KB, patch)
2015-08-24 18:59 PDT
,
Saam Barati
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2015-08-24 18:59:25 PDT
Created
attachment 259805
[details]
patch
Saam Barati
Comment 2
2015-08-25 11:40:56 PDT
landed in:
http://trac.webkit.org/changeset/188926
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug